[project]
name = "h5view"
description = "A small app for viewing h5 files in a simple and clean way"
readme = "README.md"
license = { file = "LICENCE" }
authors = [{ name = "Matthew Joyce", email = "matthew.joyce@refeyn.com" }]
dynamic = ["version"]
dependencies = ["PySide6", "numpy", "h5py", "hdf5plugin"]
keywords = ["hdf5", "h5py"]
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/refeyn/h5view"
Issues = "https://github.com/refeyn/h5view/issues"
Source = "https://github.com/refeyn/h5view"

[project.scripts]
h5view = "h5view:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pylint",
    "mypy",
    "black",
    "isort",
    "pre-commit",
    "build",
    "types-setuptools",
]
build = ["nuitka", "zstandard", "ordered-set"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true
combine_as_imports = true

[tool.pylint.MAIN]
extension-pkg-whitelist = ["PySide6"]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "R",               # R=Refactor
    "C",               # C=Conventions
    "unused-argument",
]

[tool.pylint.TYPECHECK]
generated-members = ["emit", "connect", "disconnect"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
follow_imports = "silent"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
local_partial_types = true

[[tool.mypy.overrides]]
module = "h5py"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hdf5plugin"
ignore_missing_imports = true
